tests/errors/syntax_errors/types_arg_type.py
from pyccel.decorators import types

@types(3)
def f(x):
    pass
